2007-04-30  Andreas Kupries  <andreask@activestate.com>

	* testutilities.tcl: Made TestFiles 8.2-ready. Added command
	  'TestFilesGlob' to simply return files instead of immediately
	  sourcing them.

2007-04-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* testutilities.tcl: Added 'TestFiles', a command to run a set of
	  subordinate test files, found by globbing.

	* testutilities.tcl: Added 'useAccel' to help with the setup of
	  packages which have accelerators, automatically using the proper
	  use variant.

2006-10-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* testutilities.tcl: Extended with three commands to make testing
	  of packages with multiple implementations (accelerators)
	  easier. A specific API for querying and manipulating
	  accelerators is assumed.

2006-10-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* testutilities.tcl: Changed variable definitions to shield
	  against creative writing. Added common code to save and restore
	  the environment (::env), for testsuites which have to (1) either
	  modify it as part of the tests, or (2) shield themselves against
	  manipulation from the environment.

2006-09-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* dialog.tcl: Bugfix in 'Input', cleaning up the waiting timer
	  when reaching eof on the socket. Could otherwise trigger
	  while executing an unrelated future dialog. Extended to manage
	  two traces, the new one a condensed form of the existing trace,
	  easier to put into the result of a testcase.

	* coserv.tcl: Reworked a bit to allow the restart of a server
	  after a shutdown, by recreating the helper file executed by the
	  slave-process.

2006-09-17  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* testutilities.tcl: Modified use commands to ensure that their
	  output is a proper list.

2006-09-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
