@@ -1,3 +1,8 @@
+2008-09-20  Michael Schlenker <mic42@users.sourceforge.net>
+
+	* testutitlites.tcl: Added wrong num args error messages for
+	  Tcl 8.6 alphas, to make tests pass.
+
 2007-04-30  Andreas Kupries  <andreask@activestate.com>
 
 	* testutilities.tcl: Made TestFiles 8.2-ready. Added command
